[package]
name = "veloren-server-cli"
version = "0.10.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

[package.metadata.nix]
build = true
app = true
longDescription = """
Veloren is a multiplayer voxel RPG written in Rust.
It is inspired by games such as Cube World, Legend of Zelda: Breath of the Wild, Dwarf Fortress and Minecraft.

This package includes the official server CLI.
"""

[features]
worldgen = ["server/worldgen"]
default = ["worldgen"]
tracy = ["common-frontend/tracy"]
plugins = ["server/plugins"]

[dependencies]
server = { package = "veloren-server", path = "../server", default-features = false, features = ["simd"] }
common = { package = "veloren-common", path = "../common" }
common-base = { package = "veloren-common-base", path = "../common/base" }
common-net = { package = "veloren-common-net", path = "../common/net" }
common-frontend = { package = "veloren-common-frontend", path = "../common/frontend" }

tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
num_cpus = "1.0"
ansi-parser = "0.7"
clap = "2.33"
structopt = "0.3.13"
crossterm = "0.19"
lazy_static = "1"
signal-hook = "0.3.6"
shell-words = "1.0.0"
tracing = { version = "0.1", default-features = false }
ron = {version = "0.6", default-features = false}
serde = {version = "1.0", features = [ "rc", "derive" ]}

[dependencies.tui]
git = "https://github.com/fdehau/tui-rs.git"
branch="paragraph-scroll"
default-features = false
features = ['crossterm']
