[package]
name = "veloren-server-cli"
version = "0.15.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2021"

[package.metadata.nix]
build = true
app = true
longDescription = """
Veloren is a multiplayer voxel RPG written in Rust.
It is inspired by games such as Cube World, Legend of Zelda: Breath of the Wild, Dwarf Fortress and Minecraft.

This package includes the official server CLI.
"""

[features]
worldgen = ["server/worldgen"]
persistent_world = ["server/persistent_world"]
# needed to stay compatible with voxygens format
default-publish = ["default"]
default = ["worldgen", "persistent_world"]
tracy = ["common-frontend/tracy"]
plugins = ["server/plugins"]
hot-reloading = ["server/hot-reloading"]
hot-agent = ["server/hot-agent", "agent"]
hot-site = ["server/hot-site", "world"]

[dependencies]
server = { package = "veloren-server", path = "../server", default-features = false, features = ["simd"] }
agent = { package = "veloren-server-agent", path = "../server/agent", optional = true }
common = { package = "veloren-common", path = "../common" }
common-base = { package = "veloren-common-base", path = "../common/base" }
common-net = { package = "veloren-common-net", path = "../common/net" }
common-frontend = { package = "veloren-common-frontend", path = "../common/frontend" }
world = { package = "veloren-world", path = "../world", optional = true }

tokio = { workspace = true, features = ["rt-multi-thread"] }
num_cpus = "1.0"
cansi = "2.2.1"
clap = { workspace = true }
crossterm = "0.27"
lazy_static = { workspace = true }
signal-hook = "0.3.6"
shell-words = "1.0.0"
tracing = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = [ "rc", "derive" ]}
ratatui = { version = "0.26.0", features = ["crossterm"] }

#HTTP
axum = { version = "0.6.20" }
hyper = "0.14.26"
prometheus = { workspace = true }
chrono = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.29"