[package]
name = "veloren-server"
version = "0.14.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2021"

[features]
worldgen = []
simd = ["vek/platform_intrinsics"]
plugins = ["common-state/plugins"]
persistent_world = []
hot-reloading = ["common/hot-reloading"]
hot-agent = ["server-agent/use-dyn-lib"]
hot-site = ["world/use-dyn-lib"]

default = ["worldgen", "plugins", "persistent_world", "simd"]

[dependencies]
common = { package = "veloren-common", path = "../common" }
common-base = { package = "veloren-common-base", path = "../common/base" }
common-ecs = { package = "veloren-common-ecs", path = "../common/ecs" }
common-state = { package = "veloren-common-state", path = "../common/state" }
common-systems = { package = "veloren-common-systems", path = "../common/systems" }
common-net = { package = "veloren-common-net", path = "../common/net" }
world = { package = "veloren-world", path = "../world" }
rtsim = { package = "veloren-rtsim", path = "../rtsim" }
network = { package = "veloren-network", path = "../network", features = ["metrics", "compression", "quic"], default-features = false }

server-agent = {package = "veloren-server-agent", path = "agent"}

#inline_tweak = "1.0.8"

specs = { version = "0.18", features = ["shred-derive"] }

strum = { version = "0.24", features = ["derive"] }
bincode = "1.3.2"
num_cpus = "1.0"
tracing = "0.1"
vek = { version = "0.15.8", features = ["serde"] }
futures-util = "0.3.7"
tokio = { version = "1.24", default-features = false, features = ["rt"] }
prometheus-hyper = "0.1.4"
quinn = "0.8"
rustls = { version = "0.20", default-features = false }
rustls-pemfile = { version = "1", default-features = false }
atomicwrites = "0.4"
chrono = { version = "0.4.24", default-features=false, features = ["clock", "std", "wasmbind", "serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
drop_guard = { version = "0.3.0" }
humantime = "2.1.0"
itertools = "0.10"
lazy_static = "1.4.0"
ron = { version = "0.8", default-features = false }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.50"
rand = { version = "0.8", features = ["small_rng"] }
hashbrown = { version = "0.13", features = ["rayon", "serde", "nightly"] }
parking_lot = { version = "0.12" }
rayon = "1.5"
crossbeam-channel = "0.5"
prometheus = { version = "0.13", default-features = false}
portpicker = { git = "https://github.com/xMAC94x/portpicker-rs", rev = "df6b37872f3586ac3b21d08b56c8ec7cd92fb172" }
authc = { git = "https://gitlab.com/veloren/auth.git", rev = "fb3dcbc4962b367253f8f2f92760ef44d2679c9a" }
slab  = "0.4"
rand_distr = "0.4.0"
enumset = "1.0.8"
enum-map = "2.4"
noise = { version = "0.7", default-features = false }
censor = "0.3"

rusqlite = { version = "0.28.0", features = ["array", "vtab", "bundled", "trace"] }
refinery = { version = "0.8.8", features = ["rusqlite"] }

# Plugins
plugin-api = { package = "veloren-plugin-api", path = "../plugin/api"}
