[package]
authors = [
    "Joshua Barretto <joshua.s.barretto@gmail.com>",
    "Imbris <imbrisf@gmail.com>",
]
default-run = "veloren-voxygen"
edition = "2021"
name = "veloren-voxygen"
version = "0.17.0"
# Cargo thinks it should build the voxygen binary even when a specific bench is specified for building
# Uncomment below and comment out default-run if you want to avoid this
# autobins = false

[lints]
workspace = true

[package.metadata.nix]
build = true
app = true
desktopFile = "./assets/voxygen/net.veloren.veloren.desktop"
longDescription = """
Veloren is a multiplayer voxel RPG written in Rust.
It is inspired by games such as Cube World, Legend of Zelda: Breath of the Wild, Dwarf Fortress and Minecraft.

This package includes the official client, Voxygen.
"""

[features]
hot-anim = ["anim/use-dyn-lib"]
hot-egui = ["voxygen-egui/use-dyn-lib", "egui"]
hot-reloading = ["common/hot-reloading"]
singleplayer = ["server"]
simd = ["vek/platform_intrinsics"]
tracy = ["common-frontend/tracy", "client/tracy"]
tracy-memory = ["tracy"]
# enables heap profiling with tracy
plugins = ["client/plugins", "server/plugins", "anim/plugins", "common/plugins"]
egui-ui = ["voxygen-egui", "egui", "egui_wgpu_backend", "egui_winit_platform"]
shaderc-from-source = ["shaderc/build-from-source"]
discord = ["discord-sdk"]
bin_cmd_doc_gen = []

# We don't ship egui with published release builds so a separate feature is required that excludes it.
default-publish = [
    "singleplayer",
    "native-dialog",
    "plugins",
    "discord",
    "simd",
]
default = ["default-publish", "hot-reloading", "shaderc-from-source", "egui-ui"]

[dependencies]
client = { package = "veloren-client", path = "../client" }
common = { package = "veloren-common", path = "../common" }
common-base = { package = "veloren-common-base", path = "../common/base" }
common-ecs = { package = "veloren-common-ecs", path = "../common/ecs" }
common-frontend = { package = "veloren-common-frontend", path = "../common/frontend" }
common-i18n = { package = "veloren-common-i18n", path = "../common/i18n" }
common-net = { package = "veloren-common-net", path = "../common/net" }
common-state = { package = "veloren-common-state", path = "../common/state" }
common-systems = { package = "veloren-common-systems", path = "../common/systems" }

anim = { package = "veloren-voxygen-anim", path = "anim" }
i18n = { package = "veloren-client-i18n", path = "../client/i18n" }
i18n-helpers = { package = "veloren-voxygen-i18n-helpers", path = "i18n-helpers" }
voxygen-egui = { package = "veloren-voxygen-egui", path = "egui", optional = true }

# Graphics
winit = { version = "0.30.12", features = ["serde"] }
wgpu = { version = "26", features = ["spirv", "glsl"] }
wgpu-profiler = "0.24"
bytemuck = { version = "1.7", features = ["derive"] }
# shaderc = "0.8.0"
# Working around a current bug in shaderc that causes it to use the system installation even if we specify compile from source
shaderc = { git = "https://github.com/pythonesque/shaderc-rs", rev = "f2605a02062834019bedff911aee2fd2998c49f9" }

# Ui
conrod_core = { git = "https://gitlab.com/veloren/conrod.git", branch = "copypasta_0.7" }
euc = "0.5.3"
# We should probably migrate to a more recent version at some point, but this is significant amount of work.
# Note: this does not depend on the version of `winit` anymore, all dependent code was moved into Voxygen
iced = { package = "iced_native", git = "https://github.com/Imberflur/iced", tag = "veloren-winit-0.28" }
window_clipboard = "0.4.1"
glyph_brush = "0.7.0"
# EGUI
egui = { version = "0.32", optional = true }
# We should probably migrate to the official `egui-wgpu` and `egui-winit`
egui_wgpu_backend = { version = "0.35", optional = true }
egui_winit_platform = { version = "0.27", optional = true }

# ECS
specs = { workspace = true, features = ["serde", "storage-event-control"] }

# Mathematics
vek = { workspace = true }
levenshtein = "1.0.5"

# Controller
gilrs = { version = "0.11.0", features = ["serde-serialize"] }

# Singleplayer
server = { package = "veloren-server", path = "../server", optional = true, default-features = false, features = [
    "worldgen",
] }

# CLI
clap = { workspace = true }

# Utility
assets_manager = { version = "0.12", features = ["ab_glyph"] }
backtrace = "0.3.40"
chrono = { workspace = true }
chumsky = "0.9"
crossbeam-utils = { workspace = true }
crossbeam-channel = { workspace = true }
directories-next = "2.0"
dot_vox = "5.1"
guillotiere = "0.6.2"
hashbrown = { workspace = true }
image = { workspace = true, features = ["ico"] }
kira = { git = "https://github.com/DaforLynx/kira.git", tag = "v0.10.7-with-config", default-features = false, features = [
    "cpal",
    "symphonia",
    "ogg",
] }
lazy_static = { workspace = true }
native-dialog = { version = "0.9.0", optional = true }
num = { workspace = true }
ordered-float = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_with = { version = "3.11.0", features = ["hashbrown_0_15"] }
slab = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
treeculler = "0.4"
tokio = { workspace = true, features = ["rt-multi-thread"] }
num_cpus = "1.0"
inline_tweak = { workspace = true }
itertools = { workspace = true }
sha2 = { workspace = true }
bitflags = { workspace = true, features = ["serde"] }
open = "5.3.2"

# Discord RPC
discord-sdk = { version = "0.4", optional = true }
enum-map = { workspace = true }
cpal = "0.15.3"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = "0.2"

[target.'cfg(target_family = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(target_family = "windows")'.dependencies]
# Pinned due to a memory leak on Windows occuring in versions 0.1.44
# to 0.1.46 of mimalloc and versions 0.1.40 to 0.1.42 of libmimalloc-sys
# respectively.
mimalloc = "=0.1.43"
libmimalloc-sys = "=0.1.39"

# Mumble
[target.'cfg(not(target_os="macos"))'.dependencies]
mumble-link = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [
    "rayon",
    "cargo_bench_support",
] }
world = { package = "veloren-world", path = "../world" }
rayon = { workspace = true }

[[bench]]
harness = false
name = "meshing_benchmark"

[[bin]]
name = "img_export"
required-features = []

[[bin]]
name = "cmd_doc_gen"
required-features = ["bin_cmd_doc_gen"]
